@@ -5,9 +5,12 @@ HISTORY
 1.2.3 (unreleased)
 ------------------
 
+- Correctly load image dialog for existing images using the @@images view for
+  image scales.
+  [davisagli]
+
 - Updated Norwegian translations.
   [mj]
-
 
 1.2.2 (2011-02-10)
 ------------------
